--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,31 +1,115 @@
-html {
-  font-size: 14px;
+
+/* Header och logotyp */
+header .logo {
+  padding: 1rem;
+  display: inline-block;
+  background-color: #212529;
+  color: white;
 }
 
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
+/* Datum i header */
+header .date {
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  border-radius: 5px;
+  height: 38px;
+}
+
+/* Navigering i sidomenyn */
+nav ul.list-group {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #f9f9f9;
+  height: 100%;
+}
+
+.list-group-item {
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  text-align: center;
+}
+
+.list-group-item:last-child {
+  margin-bottom: 0;
+}
+
+nav a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #333 !important;
+}
+
+.sidebar {
+  padding: 0 1rem 0 0;
+}
+
+/* Huvudinnehåll */
+main {
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.content {
+  min-height: 75vh;
+}
+
+/* Footer */
+footer {
+  border: 1px solid #ccc;
+  padding: 1rem;
+  background-color: #f9f9f9;
+  text-align: center;
+  width: 100%;
+  margin: 2rem auto;
+  box-sizing: border-box;
+}
+
+footer p {
+  margin: 0;
+}
+
+/* Styling för mindre skärmar */
+@media (max-width: 768px) {
+  footer {
+    margin: 0 auto 1rem auto;
+    width: 95% !important;
+    max-width: 520px !important;
   }
-}
 
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
-}
+  main {
+    margin: 2rem auto 0 auto !important;
+    min-height: 50vh;
+  }
 
-html {
-  position: relative;
-  min-height: 100%;
-}
+  .sidebar {
+    padding: 0;
+  }
 
-body {
-  margin-bottom: 60px;
-}
+  nav ul.list-group,
+  .content {
+    min-height: auto;
+  }
 
-.form-floating > .form-control-plaintext::placeholder, .form-floating > .form-control::placeholder {
-  color: var(--bs-secondary-color);
-  text-align: end;
-}
+  nav {
+    padding: 0;
+  }
 
-.form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
-  text-align: start;
+  .content {
+    padding: 10px;
+  }
+
+  .header {
+    flex-direction: column;
+  }
+
+  .logo {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
 }
