--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,4 +1,3 @@
-
 /* Header och logotyp */
 header .logo {
   padding: 1rem;
@@ -34,11 +33,22 @@ nav ul.list-group {
   margin-bottom: 0;
 }
 
+/* Aktiv länk i sidomenyn */
+.list-group-item.active {
+  background-color: #212529;
+  font-weight: bold;
+  border: none;
+}
+
+.list-group-item.active a {
+  color: white;
+}
+
 nav a {
   display: block;
   padding: 10px;
   text-decoration: none;
-  color: #333 !important;
+  color: #333;
 }
 
 .sidebar {
@@ -111,5 +121,9 @@ footer p {
     width: 100%;
     text-align: center;
     margin-bottom: 1rem;
+  }
+
+  .date {
+    text-align: center;
   }
 }
