--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,9 +1,12 @@
 /* Header och logotyp */
 header .logo {
   padding: 1rem;
-  display: inline-block;
   background-color: #212529;
+}
+
+header a {
   color: white;
+  text-decoration: none;
 }
 
 /* Datum i header */
