--- a/Pages/Om.cshtml
+++ b/Pages/Om.cshtml
@@ -1,5 +1,19 @@
 ﻿@page
 @model MyApp.Namespace.OmModel
 @{
-    ViewData["Title"] = "Om sidan";
+    ViewData["Title"] = "Om sidan"; // Titel på sidan
 }
+
+<section>
+    <h2 class="mb-4">Om sidan</h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+        ex ea commodo consequat.
+    </p>
+    <p>
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+        laborum.
+    </p>
+</section>
