--- a/Pages/Om.cshtml
+++ b/Pages/Om.cshtml
@@ -4,16 +4,28 @@
     ViewData["Title"] = "Om sidan"; // Titel på sidan
 }
 
-<section>
+<article>
     <h2 class="mb-4">Om sidan</h2>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-        ex ea commodo consequat.
+        Mitt namn är Isa Westling och jag studerar Webbutvecklingsprogrammet vid Mittuniversitetet. Jag
+        är just nu inne på min fjärde och sista termin, där jag bygger på mina kunskaper och förbereder mig för en
+        framtid inom webbutveckling.
     </p>
-    <p>
-        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-        laborum.
-    </p>
-</section>
+
+    <section>
+        <h3 class="mb-3 mt-4">Kunskaper och färdigheter</h3>
+        <p>Under min utbildning har jag bland annat utvecklat kunskaper inom följande områden:</p>
+        <ul>
+            <li>HTML, CSS och JavaScript</li>
+            <li>.NET och C#</li>
+            <li>Webbutveckling med ASP.NET Core,Angular Razor och Blazor</li>
+            <li>Databaser (SQL och NoSQL)</li>
+            <li>PHP</li>
+            <li>Frontend-ramverk som Angular, Vue och React</li>
+            <li>Backend-utveckling med JavaScript (Node.js) och C#</li>
+            <li>Fullstack-utveckling</li>
+            <li>Webbanvändbarhet och tillgänglighet</li>
+            <li>CMS och WordPress.</li>
+        </ul>
+    </section>
+</article>
