Fixat HTML-errors med stray end tags

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                 </ul>
             </nav>
             <!-- Huvudinnehåll i högerkolumn -->
-            <main role="main" class="col-md-9 col-sm-12">
+            <main class="col-md-9 col-sm-12">
                 @RenderBody() <!-- Renderar innehåll från sidor -->
             </main>
         </div>
